include/GASPI.h

  
  typedef char gaspi_char;
  typedef short gaspi_short;
  typedef int gaspi_int;
  typedef unsigned int gaspi_uint;
  typedef long gaspi_long;
  typedef float gaspi_float;
  typedef double gaspi_double;
  typedef unsigned long gaspi_timeout_t;
  typedef unsigned short gaspi_rank_t;
  typedef unsigned char gaspi_group_t;
  typedef unsigned int gaspi_number_t;
  typedef unsigned char gaspi_queue_id_t;
  typedef unsigned long gaspi_size_t;
  typedef unsigned long gaspi_alloc_t;
  typedef unsigned char gaspi_segment_id_t;
  typedef unsigned long gaspi_offset_t;
  typedef unsigned long gaspi_atomic_value_t;
  typedef float gaspi_time_t;
  typedef unsigned long gaspi_cycles_t;
  typedef unsigned short gaspi_notification_id_t;
  typedef unsigned int gaspi_notification_t;
  typedef unsigned int gaspi_statistic_counter_t;
  typedef int gaspi_memory_description_t;
  typedef enum
    {
      GASPI_ERROR = -1,
      GASPI_SUCCESS = 0,
      GASPI_TIMEOUT = 1,
      GASPI_ERR_EMFILE = 2,
      GASPI_ERR_ENV = 3,
      GASPI_ERR_SN_PORT = 4,
      GASPI_ERR_CONFIG = 5,
      GASPI_ERR_NOINIT = 6,
      GASPI_ERR_INITED = 7,
      GASPI_ERR_NULLPTR = 8,
      GASPI_ERR_INV_SEGSIZE = 9,
      GASPI_ERR_INV_SEG = 10,
      GASPI_ERR_INV_GROUP = 11,
      GASPI_ERR_INV_RANK = 12,
      GASPI_ERR_INV_QUEUE = 13,
      GASPI_ERR_INV_LOC_OFF = 14,
      GASPI_ERR_INV_REM_OFF = 15,
      GASPI_ERR_INV_COMMSIZE = 16,
      GASPI_ERR_INV_NOTIF_VAL = 17,
      GASPI_ERR_INV_NOTIF_ID = 18,
      GASPI_ERR_INV_NUM = 19,
      GASPI_ERR_INV_SIZE = 20,
      GASPI_ERR_MANY_SEG = 21,
      GASPI_ERR_MANY_GRP = 22,
      GASPI_QUEUE_FULL = 23,
      GASPI_ERR_UNALIGN_OFF = 24,
      GASPI_ERR_ACTIVE_COLL = 25,
      GASPI_ERR_DEVICE = 26,
      GASPI_ERR_SN = 27,
      GASPI_ERR_MEMALLOC = 28
    } gaspi_return_t;
  typedef enum
    {
      GASPI_IB = 0,	  
      GASPI_ROCE = 1,	  
      GASPI_ETHERNET = 2, 
      GASPI_GEMINI = 3,	  
      GASPI_ARIES = 4	  
    } gaspi_network_t;
  typedef struct
    {
      gaspi_network_t network_type;
      struct
      {
	struct
	{
	  gaspi_int netdev_id;   
	  gaspi_uint mtu;        
	  gaspi_uint port_check; 
	} ib;
	struct
	{
	  gaspi_uint port;
	} tcp;
      } params;
  } gaspi_dev_config_t;
  typedef enum
    {
      GASPI_OP_MIN = 0, 
      GASPI_OP_MAX = 1, 
      GASPI_OP_SUM = 2  
    } gaspi_operation_t;
  typedef enum
    {
      GASPI_TYPE_INT = 0,
      GASPI_TYPE_UINT = 1,
      GASPI_TYPE_FLOAT = 2,
      GASPI_TYPE_DOUBLE = 3,
      GASPI_TYPE_LONG = 4,
      GASPI_TYPE_ULONG = 5
    } gaspi_datatype_t;
  typedef enum
    {
      GASPI_STATE_HEALTHY = 0,
      GASPI_STATE_CORRUPT = 1
    } gaspi_qp_state_t;
  enum gaspi_alloc_policy_flags
    {
      GASPI_MEM_UNINITIALIZED = 0, 
      GASPI_MEM_INITIALIZED = 1, 
      GASPI_MEM_GPU = 2
    };
  typedef enum
    {
      GASPI_TOPOLOGY_NONE = 0,    
      GASPI_TOPOLOGY_STATIC = 1,  
      GASPI_TOPOLOGY_DYNAMIC = 2  
    } gaspi_topology_t;
  typedef struct gaspi_config
  {
    gaspi_uint logger;	                      
    gaspi_uint sn_port;                       
    gaspi_uint net_info;                      
    gaspi_uint user_net;                      
    gaspi_int sn_persistent;                  
    gaspi_timeout_t sn_timeout;               
    gaspi_dev_config_t dev_config;            
    gaspi_network_t network;                  
    gaspi_uint queue_size_max;                
    gaspi_uint queue_num;                     
    gaspi_number_t group_max;                 
    gaspi_number_t segment_max;               
    gaspi_size_t transfer_size_max;           
    gaspi_number_t notification_num;          
    gaspi_number_t passive_queue_size_max;    
    gaspi_number_t passive_transfer_size_max; 
    gaspi_size_t allreduce_buf_size;          
    gaspi_number_t allreduce_elem_max;        
    gaspi_topology_t build_infrastructure;    
    void* user_defined;                       
  } gaspi_config_t;
  typedef enum
    {
      GASPI_STATISTIC_ARGUMENT_NONE,
      GASPI_STATISTIC_ARGUMENT_RANK
    } gaspi_statistic_argument_t;
  gaspi_return_t gaspi_config_get (gaspi_config_t * const config);
  gaspi_return_t gaspi_config_set (const gaspi_config_t new_config);
  gaspi_return_t gaspi_version (float *version);
  gaspi_return_t gaspi_proc_init (const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_proc_term (const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_proc_rank (gaspi_rank_t * const rank);
  gaspi_return_t gaspi_proc_num (gaspi_rank_t * const proc_num);
  gaspi_return_t gaspi_proc_kill (const gaspi_rank_t rank,
				  const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_connect (const gaspi_rank_t rank,
				const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_disconnect (const gaspi_rank_t rank,
				   const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_group_create (gaspi_group_t * const group);
  gaspi_return_t gaspi_group_delete (const gaspi_group_t group);
  gaspi_return_t gaspi_group_add (const gaspi_group_t group,
				  const gaspi_rank_t rank);
  gaspi_return_t gaspi_group_commit (const gaspi_group_t group,
				     const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_group_num (gaspi_number_t * const group_num);
  gaspi_return_t gaspi_group_size (const gaspi_group_t group,
				   gaspi_number_t * const group_size);
  gaspi_return_t gaspi_group_ranks (const gaspi_group_t group,
				    gaspi_rank_t * const group_ranks);
  gaspi_return_t gaspi_group_max (gaspi_number_t * const group_max);
  gaspi_return_t gaspi_segment_alloc (const gaspi_segment_id_t segment_id,
				      const gaspi_size_t size,
				      const gaspi_alloc_t alloc_policy);
  gaspi_return_t gaspi_segment_delete (const gaspi_segment_id_t segment_id);
  gaspi_return_t gaspi_segment_register (const gaspi_segment_id_t segment_id,
					 const gaspi_rank_t rank,
					 const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_segment_create (const gaspi_segment_id_t segment_id,
				       const gaspi_size_t size,
				       const gaspi_group_t group,
				       const gaspi_timeout_t timeout_ms,
				       const gaspi_alloc_t alloc_policy);