src/GASPI.f90

!
! Copyright (c) - Fraunhofer ITWM - 2013-2018
!
! This file is part of GPI-2.
!
! GPI-2 is free software; you can redistribute it
! and/or modify it under the terms of the GNU General Public License
! version 3 as published by the Free Software Foundation.
!
! GPI-2 is distributed in the hope that it will be useful,
! but WITHOUT ANY WARRANTY; without even the implied warranty of
! MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
! GNU General Public License for more details.
!
! You should have received a copy of the GNU General Public License
! along with GPI-2. If not, see <http://www.gnu.org/licenses/>.


!-----------------------------------------------------------------------
module GASPI_types
!-----------------------------------------------------------------------

  use, intrinsic :: ISO_C_BINDING
  implicit none

  integer, parameter :: gaspi_int = c_int
  integer, parameter :: gaspi_char = c_char
  integer, parameter :: gaspi_short = c_short
  integer, parameter :: gaspi_long = c_long
  integer, parameter :: gaspi_float = c_float
  integer, parameter :: gaspi_double = c_double

  integer, parameter   :: gaspi_return_t = c_int
  integer, parameter   :: gaspi_timeout_t = c_int
  integer, parameter   :: gaspi_rank_t = c_short
  integer, parameter   :: gaspi_group_t = c_signed_char
  integer, parameter   :: gaspi_number_t = c_int
  integer, parameter   :: gaspi_queue_id_t = c_signed_char
  integer, parameter   :: gaspi_size_t = c_long
  integer, parameter   :: gaspi_alloc_t = c_long
  integer, parameter   :: gaspi_segment_id_t = c_signed_char
  integer, parameter   :: gaspi_offset_t = c_long
  integer, parameter   :: gaspi_atomic_value_t = c_long
  integer, parameter   :: gaspi_time_t = c_long
  integer, parameter   :: gaspi_notification_id_t = c_int
  integer, parameter   :: gaspi_notification_t = c_int
  integer, parameter   :: gaspi_statistic_counter_t = c_int
  integer, parameter   :: gaspi_cycles_t = c_long
  integer, parameter   :: gaspi_memory_description_t = c_int
  integer(gaspi_group_t), parameter :: GASPI_GROUP_ALL = 0

end module GASPI_types

!-----------------------------------------------------------------------
module GASPI
!-----------------------------------------------------------------------

  use, intrinsic :: ISO_C_BINDING
    use GASPI_types

    implicit none

    enum, bind(C) !:: gaspi_timeout_t
      enumerator :: GASPI_BLOCK = -1
      enumerator :: GASPI_TEST = 0
    end enum

    enum, bind(C) !:: gaspi_return_t
      enumerator :: GASPI_ERROR=-1
      enumerator :: GASPI_SUCCESS=0
      enumerator :: GASPI_TIMEOUT=1
    end enum

    enum, bind(C) !:: gaspi_network_t
      enumerator :: GASPI_IB=0
      enumerator :: GASPI_ROCE=1
      enumerator :: GASPI_ETHERNET=2
      enumerator :: GASPI_GEMINI=3
      enumerator :: GASPI_ARIES=4
    end enum

    enum, bind(C) !:: gaspi_operation_t
      enumerator :: GASPI_OP_MIN=0
      enumerator :: GASPI_OP_MAX=1
      enumerator :: GASPI_OP_SUM=2
    end enum

    enum, bind(C) !:: gaspi_datatype_t
      enumerator :: GASPI_TYPE_INT=0
      enumerator :: GASPI_TYPE_UINT=1
      enumerator :: GASPI_TYPE_FLOAT=2
      enumerator :: GASPI_TYPE_DOUBLE=3
      enumerator :: GASPI_TYPE_LONG=4
      enumerator :: GASPI_TYPE_ULONG=5
    end enum

    enum, bind(C) !:: gaspi_qp_state_t
      enumerator :: GASPI_STATE_HEALTHY=0
      enumerator :: GASPI_STATE_CORRUPT=1
    end enum

    enum, bind(C) !:: gaspi_alloc_policy_flags
      enumerator :: GASPI_MEM_UNINITIALIZED=0
      enumerator :: GASPI_MEM_INITIALIZED=1
    end enum

    enum, bind(C) !:: gaspi_statistic_argument_t
      enumerator :: GASPI_STATISTIC_ARGUMENT_NONE
    end enum

    type, bind(C) :: ib_dev_params_t
      integer (gaspi_int) :: netdev_id
      integer (gaspi_int) :: mtu
      integer (gaspi_int) :: port_check
    end type ib_dev_params_t

    type, bind(C) :: tcp_dev_params_t
      integer(gaspi_int) :: tcp_port
    end type tcp_dev_params_t

    type, bind(C) :: gaspi_dev_config_t
      integer (gaspi_int) :: network
      type (ib_dev_params_t) :: params_ib
      type (tcp_dev_params_t) :: params_tcp
    end type gaspi_dev_config_t

    type, bind(C) :: gaspi_config_t
      integer (gaspi_int)      :: logger
      integer (gaspi_int)      :: sn_port
      integer (gaspi_int)      :: net_info
      integer (gaspi_int)      :: user_net
      integer (gaspi_int)      :: sn_persistent
      integer (c_int64_t)      :: sn_timeout
      type (gaspi_dev_config_t):: dev_config
      integer (gaspi_int)      :: network
      integer (gaspi_int)      :: queue_size_max
      integer (gaspi_int)      :: queue_num
      integer (gaspi_number_t) :: group_max
      integer (gaspi_number_t) :: segment_max
      integer (gaspi_size_t)   :: transfer_size_max
      integer (gaspi_number_t) :: notification_num
      integer (gaspi_number_t) :: passive_queue_size_max
      integer (gaspi_number_t) :: passive_transfer_size_max
      integer (gaspi_size_t)   :: allreduce_buf_size
      integer (gaspi_number_t) :: allreduce_elem_max
      integer (gaspi_number_t) :: build_infrastructure
    end type gaspi_config_t

    interface ! gaspi_config_get
      function gaspi_config_get(config) &
&         result( res ) bind(C, name="gaspi_config_get")
	import
	type(gaspi_config_t) :: config
	integer(gaspi_return_t) :: res
      end function gaspi_config_get
    end interface

    interface ! gaspi_config_set
      function gaspi_config_set(new_config) &
&         result( res ) bind(C, name="gaspi_config_set")
	import
	type(gaspi_config_t), value :: new_config
	integer(gaspi_return_t) :: res
      end function gaspi_config_set
    end interface

    interface ! gaspi_version
      function gaspi_version(version) &
&         result( res ) bind(C, name="gaspi_version")
	import
	real(gaspi_float) :: version
	integer(gaspi_return_t) :: res
      end function gaspi_version
    end interface

    interface ! gaspi_proc_init
      function gaspi_proc_init(timeout_ms) &
&         result( res ) bind(C, name="gaspi_proc_init")
	import
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_proc_init
    end interface

    interface ! gaspi_proc_term
      function gaspi_proc_term(timeout_ms) &
&         result( res ) bind(C, name="gaspi_proc_term")
	import
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_proc_term
    end interface

    interface ! gaspi_proc_rank
      function gaspi_proc_rank(rank) &
&         result( res ) bind(C, name="gaspi_proc_rank")
	import
	integer(gaspi_rank_t) :: rank
	integer(gaspi_return_t) :: res
      end function gaspi_proc_rank
    end interface

    interface ! gaspi_proc_num
      function gaspi_proc_num(proc_num) &
&         result( res ) bind(C, name="gaspi_proc_num")
	import
	integer(gaspi_rank_t) :: proc_num
	integer(gaspi_return_t) :: res
      end function gaspi_proc_num
    end interface

    interface ! gaspi_proc_kill
      function gaspi_proc_kill(rank,timeout_ms) &
&         result( res ) bind(C, name="gaspi_proc_kill")
	import
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_proc_kill
    end interface

    interface ! gaspi_connect
      function gaspi_connect(rank,timeout_ms) &
&         result( res ) bind(C, name="gaspi_connect")
	import
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_connect
    end interface

    interface ! gaspi_disconnect
      function gaspi_disconnect(rank,timeout_ms) &
&         result( res ) bind(C, name="gaspi_disconnect")
	import
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_disconnect
    end interface

    interface ! gaspi_group_create
      function gaspi_group_create(group) &
&         result( res ) bind(C, name="gaspi_group_create")
	import
	integer(gaspi_group_t) :: group
	integer(gaspi_return_t) :: res
      end function gaspi_group_create
    end interface

    interface ! gaspi_group_delete
      function gaspi_group_delete(group) &
&         result( res ) bind(C, name="gaspi_group_delete")
	import
	integer(gaspi_group_t), value :: group
	integer(gaspi_return_t) :: res
      end function gaspi_group_delete
    end interface

    interface ! gaspi_group_add
      function gaspi_group_add(group,rank) &
&         result( res ) bind(C, name="gaspi_group_add")
	import
	integer(gaspi_group_t), value :: group
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_return_t) :: res
      end function gaspi_group_add
    end interface

    interface ! gaspi_group_commit
      function gaspi_group_commit(group,timeout_ms) &
&         result( res ) bind(C, name="gaspi_group_commit")
	import
	integer(gaspi_group_t), value :: group
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_group_commit
    end interface

    interface ! gaspi_group_num
      function gaspi_group_num(group_num) &
&         result( res ) bind(C, name="gaspi_group_num")
	import
	integer(gaspi_number_t) :: group_num
	integer(gaspi_return_t) :: res
      end function gaspi_group_num
    end interface

    interface ! gaspi_group_size
      function gaspi_group_size(group,group_size) &
&         result( res ) bind(C, name="gaspi_group_size")
	import
	integer(gaspi_group_t), value :: group
	integer(gaspi_number_t) :: group_size
	integer(gaspi_return_t) :: res
      end function gaspi_group_size
    end interface

    interface ! gaspi_group_ranks
      function gaspi_group_ranks(group,group_ranks) &
&         result( res ) bind(C, name="gaspi_group_ranks")
	import
	integer(gaspi_group_t), value :: group
	type(c_ptr), value :: group_ranks
	integer(gaspi_return_t) :: res
      end function gaspi_group_ranks
    end interface

    interface ! gaspi_group_max
      function gaspi_group_max(group_max) &
&         result( res ) bind(C, name="gaspi_group_max")
	import
	integer(gaspi_number_t) :: group_max
	integer(gaspi_return_t) :: res
      end function gaspi_group_max
    end interface

    interface ! gaspi_segment_alloc
      function gaspi_segment_alloc(segment_id,size,alloc_policy) &
&         result( res ) bind(C, name="gaspi_segment_alloc")
	import
	integer(gaspi_segment_id_t), value :: segment_id
	integer(gaspi_size_t), value :: size
	integer(gaspi_alloc_t), value :: alloc_policy
	integer(gaspi_return_t) :: res
      end function gaspi_segment_alloc
    end interface

    interface ! gaspi_segment_delete
      function gaspi_segment_delete(segment_id) &
&         result( res ) bind(C, name="gaspi_segment_delete")
	import
	integer(gaspi_segment_id_t), value :: segment_id
	integer(gaspi_return_t) :: res
      end function gaspi_segment_delete
    end interface

    interface ! gaspi_segment_register
      function gaspi_segment_register(segment_id,rank,timeout_ms) &
&         result( res ) bind(C, name="gaspi_segment_register")
	import
	integer(gaspi_segment_id_t), value :: segment_id
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_segment_register
    end interface

    interface ! gaspi_segment_create
      function gaspi_segment_create(segment_id,size,group, &
&         timeout_ms,alloc_policy) &
&         result( res ) bind(C, name="gaspi_segment_create")
	import
	integer(gaspi_segment_id_t), value :: segment_id
	integer(gaspi_size_t), value :: size
	integer(gaspi_group_t), value :: group
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_alloc_t), value :: alloc_policy
	integer(gaspi_return_t) :: res
      end function gaspi_segment_create
    end interface
